Improved wording on account settings

--- a/app/views/accounts/edit.html.haml
+++ b/app/views/accounts/edit.html.haml
@@ -10,7 +10,7 @@
       %td.label= 'Newbie limit'[]
       %td.field
         = f.text_field :newbie_limit, :size => 3
-        .notes= 'This limit is used to distinguish between newbies and players in normal rankings.'
+        .notes= 'Number of matches a user must play to be part of normal rankings.'[]
     
     %tr
       %td.label &nbsp;
