Improved form layout on user edit and creation

--- a/app/views/accounts/edit.html.haml
+++ b/app/views/accounts/edit.html.haml
@@ -1,10 +1,9 @@
 - title 'Account settings', :show => true
 
-
 = error_messages_for :account
 
 - form_for current_account do |f|
-  %h3= 'Basics'
+  %h3= 'Basics'[]
   %table.form
     %tr
       %td.label= 'Newbie limit'[]
