--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -1,9 +1,12 @@
+- title 'Edit user', :show => true
+
 = error_messages_for :user
 
 - form_for @user, :html => { :multipart => true } do |f|
   = render :partial => 'form', :locals => { :f => f }
-    
-  %p
-    = submit_tag 'Save'[], :disable_with => 'Saving'[] + '&hellip;'
-    - account_admin_area do
+
+- if account_admin?
+  - content_for :sidebar do
+    %h3= 'Administration'
+    %p
       = link_to 'Destroy account'[], user_path(@user), :method => :delete
