--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -6,9 +6,9 @@
       .user
         .image
           - if user.mugshot
-            = link_to image_tag(user.mugshot.public_filename(:thumb), :alt => h(user.name)), user_path(user)
+            = link_to image_tag(user.mugshot.public_filename(:thumb), :alt => h(user.name)), user
         .login= user.login
-        .name= user.name
+        .name= link_to user.name, user
         .role= user.is_admin? ? 'Super Admin'[] : (user.is_account_admin? ? 'Admin'[] : 'Normal'[])
         .email= mail_to user.email
         .created_at= user.created_at.to_s :long
@@ -20,9 +20,5 @@
 
 - if account_admin?
   - content_for :sidebar do
-    = error_messages_for :user
-    - form_for @user, :html => { :multipart => true } do |f|
-      %h3= 'Add user'[]
-
-      = render :partial => 'form', :locals => { :f => f }
-      = submit_tag 'Save'[]
+    %h3= 'Administration'
+    = link_to 'Add user', new_user_path
