--- a/app/views/users/new.html.haml
+++ b/app/views/users/new.html.haml
@@ -1,8 +1,6 @@
+- title 'Add user', :show => true
+
 = error_messages_for :user
 
 - form_for @user, :html => { :multipart => true } do |f|
   = render :partial => 'form', :locals => { :f => f }
-    
-  %p
-    = submit_tag 'Sign up'[], :disable_with => 'Signing up'[] + '&hellip;'
-    = link_to 'Login'[], login_url
