--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -201,6 +201,9 @@ table.form
       :color #66666E
       :font-size 11px
       :padding 3px 0px
+      
+    input
+      :color #555555
     
   td.label
     :color #66666E
