Changed add user to create user

--- a/app/views/users/index.html.haml
+++ b/app/views/users/index.html.haml
@@ -21,4 +21,4 @@
 - if account_admin?
   - content_for :sidebar do
     %h3= 'Administration'
-    = link_to 'Add user', new_user_path
+    = link_to 'Create user', new_user_path
