Remove account => Remove user

--- a/app/views/users/edit.html.haml
+++ b/app/views/users/edit.html.haml
@@ -9,4 +9,4 @@
   - content_for :sidebar do
     %h3= 'Administration'
     %p
-      = link_to 'Remove account'[], user_path(@user), :method => :delete
+      = link_to 'Remove user'[], user_path(@user), :method => :delete
