Improved form styling

--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -207,6 +207,8 @@ table.form
       :border-color #666666 rgb(204, 204, 204) rgb(204, 204, 204)
       :border-style solid
       :border-width 1px
+      :padding 2px
+      :font-size 12px
       
     input.small
       :width 4em
