--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -170,7 +170,9 @@ table.form {
       color: #555555;
       border-color: #666666 rgb(204, 204, 204) rgb(204, 204, 204);
       border-style: solid;
-      border-width: 1px; }
+      border-width: 1px;
+      padding: 2px;
+      font-size: 12px; }
     table.form td input.small {
       width: 4em; }
     table.form td .fieldWithErrors input {
