--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -165,7 +165,7 @@ h2#page_title
   :font-weight bold
   :margin-top 1em
   :margin-bottom 0
-  :background transparent url(/images/h2_bg.gif) repeat-x scroll 0px 4px
+  :background transparent url(../images/h2_bg.gif) repeat-x scroll 0px 4px
   
   span
     :background #FFFFFF none repeat scroll 0% 0%
@@ -209,6 +209,11 @@ table.form
       :border-width 1px
       :padding 2px
       :font-size 12px
+      
+    input.required
+      :background-image url(../images/required_bg.gif)
+      :background-repeat no-repeat
+      :background-position top right
       
     input.small
       :width 4em
