--- a/public/stylesheets/screen.css
+++ b/public/stylesheets/screen.css
@@ -380,8 +380,7 @@ table.form {
 #bd #graph {
   margin-top: 1.5em; }
   #bd #graph #chart {
-    margin-top: 1em;
-    margin-bottom: 20px; }
+    margin-top: 1em; }
 #bd .user .mugshot {
   text-align: center;
   padding-bottom: 1em; }
