--- a/app/views/accounts/edit.html.haml
+++ b/app/views/accounts/edit.html.haml
@@ -8,7 +8,7 @@
     %tr
       %td.label= 'Newbie limit'[]
       %td.field
-        = f.text_field :newbie_limit, :class => 'small text required'
+        = f.text_field :newbie_limit, :class => 'text required small'
         .notes= 'Number of matches a user must play to be part of normal rankings.'[]
     
     %tr
