--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -13,6 +13,7 @@
 
   %table
     %tr
+      %th &nbsp;
       %th= 'Team mate'[]
       %th= 'Total ranking'[]
       %th= 'Matches played'[]
@@ -21,6 +22,7 @@
       
     - @teams.each do |team|
       %tr
+        %td= link_to image_tag('icons/game.png', :class => 'team', :alt => "Show this team's matches"[]), matches_path(:filter => team[:team].team_ids)
         %td= link_to team[:team_mate].name, team[:team_mate]
         %td= team[:team].ranking_total.to_i
         %td= team[:played]
