--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -14,6 +14,7 @@
   %table
     %tr
       %th &nbsp;
+      %th &nbsp;
       %th= 'Team mate'[]
       %th= 'Total ranking'[]
       %th= 'Matches played'[]
@@ -23,6 +24,7 @@
     - @teams.each do |team|
       %tr{ :class => cycle('odd', 'even') }
         %td= link_to image_tag('icons/game.png', :class => 'team', :alt => "Show this team's matches"[]), matches_path(:filter => team[:team].team_ids)
+        %td= link_to image_tag('icons/chart_bar.png', :class => 'team'), team_path(team[:team].team_ids)
         %td= link_to team[:team_mate].name, team[:team_mate]
         %td= team[:team].ranking_total.to_i
         %td= team[:played]
