--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -635,6 +635,9 @@ table.form
           :font-weight bold
 
     .user, .team
+      .edit_user_link
+        :float right
+    
       .matchlink
         :margin-top 1.5em
         
