--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,8 +1,8 @@
-- title 'Ranking chart for {name}'[:ranking_chart_for, h(@user.name)]
+- title h(@user.name), :show => true
 
 - if @user.memberships_count > 0
   #graph
-    %h3= 'Ranking chart for {name}'[:ranking_chart_for, h(@user.name)]
+    %h3= 'Ranking chart'[]
     - form_tag @user, :method => :get do
       = select_tag('period', options_for_select(time_periods, @time_period), :onchange => 'this.form.submit();')
       = submit_tag 'Update'[]
