--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -261,6 +261,11 @@ table.form
       td
         :background-color #EEEEEE
 
+  .notes
+    :font-size 11px
+    :color #999999
+    :font-weight normal
+
 #bd
   form
     h3
