Better error handling on dashboard

--- a/app/views/dashboard/_leaderboard.html.haml
+++ b/app/views/dashboard/_leaderboard.html.haml
@@ -20,7 +20,7 @@
         %td= index + start_at
         %td
           = position_icon(@positions[user.id])
-          = '(' + @positions[user.id][:then].to_s + ')'
+          = '(' + @positions[user.id][:then].to_s + ')' unless @positions[user.id].blank?
         %td
           = link_to image_tag('icons/game.png', :class => 'team', :alt => "Show this user's matches"[]), matches_path(:filter => user.id)
           = user_link_full(user)
