Show mate ranking

--- a/app/views/shared/_login.html.haml
+++ b/app/views/shared/_login.html.haml
@@ -2,6 +2,6 @@
   = link_to 'Profile'[], edit_user_path(current_user)
   - if account_admin?
     |
-    = link_to 'Account'[], edit_account_path(current_account)
+    = link_to 'Manage account'[], edit_account_path(current_account)
   |
   = link_to 'Log out'[], logout_path
