--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -16,7 +16,8 @@
       %th &nbsp;
       %th &nbsp;
       %th= 'Team mate'[]
-      %th= 'Total ranking'[]
+      %th= 'Ranking'[]
+      %th= 'Team ranking'[]
       %th= 'Matches played'[]
       %th= 'Matches won'[]
       %th= 'Percentage won'[]
@@ -26,6 +27,7 @@
         %td= link_to image_tag('icons/game.png', :class => 'team', :alt => "Show this team's matches"[]), matches_path(:filter => team[:team].team_ids)
         %td= link_to image_tag('icons/chart_bar.png', :class => 'team'), team_path(team[:team].team_ids)
         %td= link_to team[:team_mate].name, team[:team_mate]
+        %td= team[:team_mate].ranking.to_i
         %td= team[:team].ranking_total.to_i
         %td= team[:played]
         %td= team[:wins]
