Copyright 2007 -> Copyright 2007-<current year>

--- a/app/views/shared/_footer.haml
+++ b/app/views/shared/_footer.haml
@@ -1,6 +1,6 @@
 #ft
   .content
-    Copyright 2007 by Lars Sehested
+    = 'Copyright 2007-{this_year} by Lars Sehested'[:copyright, Date.today.year]
     = '&middot;'
     = link_to 'Project home'[], 'http://scorekeepr.dk/', :target => '_blank'
     = '&middot;'
