Cleanup front page

--- a/app/views/pages/index.html.haml
+++ b/app/views/pages/index.html.haml
@@ -1,13 +1,10 @@
 %h1 Welcome to Score Keeper
 
 %p
-  Finally! Score Keeper is online (though in pre-alpha :-). Score Keeper is a very simple web app for keeping score, rankings, etc. for matches. However, in this initial version only Table Soccer, or foosball, is supported.
-  
-%h3
-  Notes
+  Score Keeper is a very simple web app for keeping score, rankings, etc. for matches.
   
 %p
-  Please be aware that this site is in a very early alpha stage. Not alpha/beta as Google defines it, but alpha as in not yet deemed ready for launch in any way by its authors.
+  Please note that Score Keeper currently only supports 2-on-2 games so you must have at least 4 users to create a match. Support for 1-on-1 games is planned and will hopefully be available soon.
   
 - content_for :sidebar do
   %h2
