--- a/public/stylesheets/sass/screen.sass
+++ b/public/stylesheets/sass/screen.sass
@@ -715,6 +715,15 @@ body.login
     :width 470px
     
 body.public
+  h1
+    :font-size 19px
+    
+  h2
+    :font-size 17px
+    
+  h3
+    :font-size 15px
+
   #new_account
     h3
       margin-bottom 1.5em
