--- a/app/views/shared/_login.html.haml
+++ b/app/views/shared/_login.html.haml
@@ -1,5 +1,5 @@
 #user
-  %span.current_user= current_user.login
+  %span.current_user= link_to current_user.login, current_user
   |
   - unless session[:real_user_id].blank?
     = link_to 'Unimpersonate'[], unimpersonate_sessions_path, :method => :put
