--- a/app/views/matches/_match_columns.html.haml
+++ b/app/views/matches/_match_columns.html.haml
@@ -1,22 +1,24 @@
+- sorted_teams = Match.sort_teams_by_filter(match.teams, params[:filter])
+
 %td.members
-  = link_to image_tag('icons/game.png', :class => 'team', :alt => "Show this team's matches"[]), matches_path(:filter => match.sort_teams_by_filter(params[:filter]).first.team_ids)
-  = render :partial => 'matches/members', :locals => { :team => match.sort_teams_by_filter(params[:filter]).first }
+  = link_to image_tag('icons/game.png', :class => 'team', :alt => "Show this team's matches"[]), matches_path(:filter => sorted_teams.first.team_ids)
+  = render :partial => 'matches/members', :locals => { :team => sorted_teams.first }
 
 %td.score{ :nowrap => 'nowrap' }
-  - if match.sort_teams_by_filter(params[:filter]).first.score > match.sort_teams_by_filter(params[:filter]).last.score
+  - if sorted_teams.first.score > sorted_teams.last.score
     = image_tag('icons/medal_gold_2.png', :class => 'winner')
   - else
     = image_tag('icons/blank.gif', :width => 16, :height => 16, :class => 'loser')
   
-  = match.sort_teams_by_filter(params[:filter]).collect(&:score).join(' - ')
-  - if match.sort_teams_by_filter(params[:filter]).last.score > match.sort_teams_by_filter(params[:filter]).first.score
+  = sorted_teams.collect(&:score).join(' - ')
+  - if sorted_teams.last.score > sorted_teams.first.score
     = image_tag('icons/medal_gold_2.png', :class => 'winner')
   - else
     = image_tag('icons/blank.gif', :width => 16, :height => 16, :class => 'loser')
 
 %td.members
-  = link_to image_tag('icons/game.png', :class => 'team', :alt => "Show this team's matches"[]), matches_path(:filter => match.sort_teams_by_filter(params[:filter]).last.team_ids)
-  = render :partial => 'matches/members', :locals => { :team => match.sort_teams_by_filter(params[:filter]).last }
+  = link_to image_tag('icons/game.png', :class => 'team', :alt => "Show this team's matches"[]), matches_path(:filter => sorted_teams.last.team_ids)
+  = render :partial => 'matches/members', :locals => { :team => sorted_teams.last }
   
 %td.comments
   = link_to image_tag('icons/comment.png', :class => 'comments', :alt => 'Comment on this match'[]) + " (#{match.comments_count})", match_path(match)
