--- a/app/views/users/show.iphone.haml
+++ b/app/views/users/show.iphone.haml
@@ -12,7 +12,7 @@
   %fieldset
     .row
       %label= 'Played'[]
-      %input{ :type => 'text', :value => @user.memberships_count }
+      %input{ :type => 'text', :value => @user.matches_played }
     .row
       %label= 'Won'[]
       %input{ :type => 'text', :value => @user.matches_won }
