--- a/app/views/dashboard/index.html.haml
+++ b/app/views/dashboard/index.html.haml
@@ -5,10 +5,10 @@
 
 - cache(cache_key) do
   - if @rankings.size > 0
-    = render :partial => 'leaderboard', :locals => { :people => @rankings, :start_at => 1, :title => 'Rankings'[], :details => '' }
+    = render :partial => 'leaderboard', :locals => { :game_participations => @rankings, :start_at => 1, :title => 'Rankings'[], :details => '' }
 
   - if @newbies.size > 0
-    = render :partial => 'leaderboard', :locals => { :people => @newbies, :start_at => @rankings.size + 1, :title => 'Newbies'[], :details => "- less than {limit} matches"[:less_than_matches, current_account.newbie_limit] }
+    = render :partial => 'leaderboard', :locals => { :game_participations => @newbies, :start_at => @rankings.size + 1, :title => 'Newbies'[], :details => "- less than {limit} matches"[:less_than_matches, current_game.newbie_limit] }
 
 = render :partial => 'recent_matches', :locals => { :recent_matches => @recent_matches }
       
@@ -17,8 +17,8 @@
     - unless @leader.nil?
       #leader
         %h3= 'Leader'[]
-        .mugshot= link_to image_tag(@leader.mugshot.public_filename(:thumb), :alt => @leader.name), user_path(@leader) if @leader.mugshot
-        = user_link_full @leader
+        .mugshot= link_to image_tag(@leader.user.mugshot.public_filename(:thumb), :alt => @leader.name), user_path(@leader) if @leader.user.mugshot
+        = user_link_full @leader.user
 
     #counts
       %h3= 'Totals'[]
@@ -36,14 +36,14 @@
             %td
               - unless @all_time_high.nil?
                 %label= 'All time high'[] + ':'
-                = link_to @all_time_high.current_ranking, match_path(@all_time_high.team.match), :class => 'match'
+                = link_to @all_time_high.current_ranking, game_match_path(current_game, @all_time_high.team.match), :class => 'match'
                 = 'by'[]
                 %br
                 = user_link_full find_user(@all_time_high.user_id)
             %td
               - unless @all_time_low.nil?
                 %label= 'All time low'[] + ':'
-                = link_to @all_time_low.current_ranking, match_path(@all_time_low.team.match), :class => 'match'
+                = link_to @all_time_low.current_ranking, game_match_path(current_game, @all_time_low.team.match), :class => 'match'
                 = 'by'[]
                 %br
                 = user_link_full find_user(@all_time_low.user_id)
