--- a/app/views/matches/index.html.haml
+++ b/app/views/matches/index.html.haml
@@ -8,7 +8,7 @@
       - else
         = 'Filter by <b>{first}</b>'[:filter_by_one, h(@filter[0].display_name)]
 
-      = link_to 'Clear filter', matches_path, :class => 'clear'
+      = link_to 'Clear filter', game_matches_path(current_game), :class => 'clear'
 
   #matches
     .list
@@ -29,17 +29,17 @@
               = match.played_at.to_s :short
               = ' by {user}'[:by_user, link_to(find_user(match.creator_id).login, find_user(match.creator_id))] unless match.creator_id.nil?
 
-            %td= link_to 'Delete', match_path(match), :method => :delete, :confirm => 'Delete match. Are you sure?'[] if logged_in?
+            %td= link_to 'Delete', game_match_path(match.game_id, match), :method => :delete, :confirm => 'Delete match. Are you sure?'[] if logged_in?
 
   .pagination= will_paginate @matches
 
   .bottom_space
-    = link_to 'Atom feed (all matches)'[] + ' ' + image_tag('rss.gif'), match_feed_url, :class => 'rss'
+    = link_to 'Atom feed (all matches)'[] + ' ' + image_tag('rss.gif'), match_feed_url(current_game), :class => 'rss'
     - unless params[:filter].blank?
-      = link_to 'Atom feed (filtered)'[] + ' ' + image_tag('rss.gif'), match_feed_url(:filter => params[:filter]), :class => 'rss'
+      = link_to 'Atom feed (filtered)'[] + ' ' + image_tag('rss.gif'), match_feed_url(current_game, :filter => params[:filter]), :class => 'rss'
 
 - content_for :head do
-  = auto_discovery_link_tag :atom, match_feed_url, :title => 'All matches'[]
+  = auto_discovery_link_tag :atom, match_feed_url(current_game), :title => 'All matches'[]
 
   - unless params[:filter].blank?
-    = auto_discovery_link_tag :atom, match_feed_url(:filter => params[:filter]), :title => 'Filtered'[]
+    = auto_discovery_link_tag :atom, match_feed_url(current_game, :filter => params[:filter]), :title => 'Filtered'[]
